--- a/Unit_1/practical1.html
+++ b/Unit_1/practical1.html
@@ -12,6 +12,12 @@
         <p>My ERP number is <i>10383</i>.</p>
         <p>This is my first practical assignment in <strong>HTML</strong>.</p>
         <em><p>I am learning to create web pages.</p></em>
-        
+        <h3>My hobbies</h3>
+        <ul>
+           <b><li>Reading books</li></b>
+            <li>Playing cricket</li>
+            <li>Listening to music</li>
+        </ul>
+
     </body>
 </html>
