--- a/Unit_1/practical2.html
+++ b/Unit_1/practical2.html
@@ -34,6 +34,7 @@
     <!-- Ordered List -->
     <h2>Ordered List</h2>
     <ol>
+        <type="1">
         <li>Learn HTML</li>
         <li>Learn CSS</li>
         <li>Learn JavaScript</li>
