--- a/Unit_1/practical3.html
+++ b/Unit_1/practical3.html
@@ -15,7 +15,7 @@
     <!-- Header Row -->
     <tr>
         <td colspan="4" align="center">
-           <b> <h2>ABC Institute of Technology</h2>
+           <b><h2>ABC Institute of Technology</h2></b>
             <p>Semester Examination Result</p>
         </td>
     </tr>
