Add content to practical6.html external6.css

--- a/Unit 2/practical6.html
+++ b/Unit 2/practical6.html
@@ -1,4 +1,5 @@
-
+<!--UNIT 2-->
+<!--BHASKAR RANJAN | ERP: 10383-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +28,7 @@
     </style>
 
     <!-- External CSS -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="external6.css">
 </head>
 <body>
     <!-- Inline CSS -->
