Add content to file

--- a/Unit 4/practical16.html
+++ b/Unit 4/practical16.html
@@ -1,3 +1,5 @@
+<!--UNIT 4-->
+<!--BHASKAR RANJAN | ERP 10383 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,9 +16,9 @@ function toggleText() {
     var element = document.getElementById("text");
 
     if (element.style.display === "none") {
-        element.style.display = "block"; // show
+        element.style.display = "block"; 
     } else {
-        element.style.display = "none";  // hide
+        element.style.display = "none";  
     }
 }
 </script>
